put links on new lines

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <a href="com.ebay:82375023975">com.ebay:82375023975</a>
-  <a href="market://details?id=com.anonyome.mysudo">market://details?id=com.anonyome.mysudo</a>
-  <a href="mailto:john@doh.com">mailto:john@doh.com</a>
+  <p><a href="com.ebay:82375023975">com.ebay:82375023975</a></p>
+  <p><a href="market://details?id=com.anonyome.mysudo">market://details?id=com.anonyome.mysudo</a></p>
+  <p><a href="mailto:john@doh.com">mailto:john@doh.com</a></p>
 </body>
 </html>
